<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    style="@style/sec_page_bg"
    >   
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="2"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellow" >
            <ImageView
                android:id="@+id/imageViewEditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/text_editor"/>
             <TextView
                 android:id="@+id/signDays"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/signcount"
                 android:layout_toRightOf="@+id/imageViewEditor"
                 android:text="3天"
                 android:textColor="@color/white" />
             <TextView
                 android:id="@+id/signBeans"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imageViewEditor"
                 android:layout_toRightOf="@+id/imageViewEditor"
                 android:text="签到共得到3"
                 android:textColor="@color/white" 
                 android:textSize="10sp"
                 />
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/signDays"
                 android:layout_toRightOf="@+id/signBeans"
                 android:layout_alignTop="@+id/signBeans"
                 android:layout_alignBottom="@+id/signBeans"
                 android:src="@drawable/dd2" />
             <TextView
                 android:id="@+id/signcount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/signDays"
                 android:layout_alignParentTop="true"
                 android:text="签到总数"
                 android:textColor="@color/white" />

        </RelativeLayout>
        <RelativeLayout 
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/yellow">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/balence_dd_logo"
                android:id="@+id/balence_dd">                
            </ImageView>"
            
            <TextView
                android:id="@+id/my_beans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/balence_dd"
                android:layout_toRightOf="@+id/balence_dd"
                android:text="我的智慧豆"
                android:textColor="@color/white" />

              <TextView
                    android:id="@+id/beans_nums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/my_beans"
                    android:layout_below="@+id/my_beans"
                    android:text="103"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"                
                 android:layout_toRightOf="@+id/beans_nums"
                 android:layout_alignTop="@+id/beans_nums"
                 android:layout_alignBottom="@+id/beans_nums"
                 android:src="@drawable/balence_dd_logo" />

             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/beans_nums"
                 android:layout_below="@+id/beans_nums"
                 android:src="@drawable/exchange" 
                 android:id="@+id/exchange"/>             
            </RelativeLayout>
       </LinearLayout>    
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="0px"
	        android:layout_weight="6"
	        android:src="@drawable/calender"
	        android:scaleType="fitXY"
	        android:layout_marginTop="10px"
	         >
	   </ImageView>	
	   <LinearLayout 
	       android:layout_width="match_parent"
	       android:layout_height="0px"
	       android:orientation="vertical"
	       android:layout_weight="3"
	       >
	   <TextView
	       android:layout_marginTop="10px"
	       android:layout_width="match_parent"
	       android:layout_height="0px"
	       android:layout_weight="1"
	       android:text="签到规则:"
	       android:gravity="center_vertical"
	       >
	   </TextView> 
	   <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="0px"
	       android:layout_weight="1"
	       android:orientation="horizontal"
	       android:gravity="center_vertical"
	       >
	       <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/one_icn"
	           />
	       <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rule1"
	           />
	   </LinearLayout>
	   	   <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="0px"
	       android:layout_weight="1"
	       android:orientation="horizontal"
	       android:gravity="center_vertical"
	       >
	       <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/two_icn"
	           />
	       <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rule2"
	           />
	   </LinearLayout>
	   <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="0px"
	       android:layout_weight="1"
	       android:orientation="horizontal"
	       android:gravity="center_vertical"
	       >
	       <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/three_icn"
	           />
	       <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rule3"
	           />
	   </LinearLayout>
	   	   <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="0px"
	       android:layout_weight="1"
	       android:orientation="horizontal"
	       android:gravity="center_vertical"
	       >
	       <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/three_icn"
	           />
	       <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rule4"
	           />
	   </LinearLayout>
	   	   <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="0px"
	       android:layout_weight="1"
	       android:orientation="horizontal"
	       android:gravity="center_vertical"
	       >
	       <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/three_icn"
	           />
	       <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rule_attention"
	           />
	   </LinearLayout>
</LinearLayout>
</LinearLayout>
